Создано с помощью Colaboratory

--- a/Exercises/1_Intro.ipynb
+++ b/Exercises/1_Intro.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMfB2zN84VXbxBJ2EFQvbQ"
+      "authorship_tag": "ABX9TyMp1KHp42JTY1J7vQ6vb8Qy",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/DenisPanchin/study-pandas/blob/main/Exercises/1_Intro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -87,7 +98,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**3. ⋆⋆ Посмотреть версию библиотеки Pandas**"
+        "**3. ⋆ Посмотреть версию библиотеки Pandas**"
       ],
       "metadata": {
         "id": "DbHSBSTndSrX"
